--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "immer": "^9.0.1",
     "node-sass": "^5.0.0",
+    "numeral": "^2.0.6",
     "react-modal": "^3.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
